feat: adding pagination to life_rules index (fix: 60, fix #61)
